fix overlapping logos on bottom

--- a/test/wwwroot/css/site.css
+++ b/test/wwwroot/css/site.css
@@ -144,7 +144,6 @@ a {
 
     #mainLogoBeta {
         margin-left: -60px;
-        margin-top:50px;
     }
 
     #LogoSvg {
